# parse-android-dynparts

./: CMakeLists.txt  main.cpp
debian/: changelog  control
liblp/: CMakeLists.txt  reader.cpp  utility.cpp  utility.h
